# pg_ivfflat

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ivfflat/: Cargo.toml
pg_extension/: Cargo.toml  pg_ivfflat.control
pg_extension/src/: lib.rs  operator.rs  vector_type.rs
