[package]
name = "pg_ivfflat"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_ivfflat"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
acap = "0.3.0"
pgrx = "0.12.9"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
pgrx-tests = "0.12.9"
